TEST_PROGRAMS/INVALID/02/notallpathshavereturns.go
package main

func foo(a int) int{
}

func main (){
    foo(1)
}
